Fixed long word wrapping in the tooltip and enforced a max width

--- a/src/webui/html/interactive/stylesheets/xtrace.css
+++ b/src/webui/html/interactive/stylesheets/xtrace.css
@@ -122,6 +122,8 @@
 .xtrace-tooltip .value {
 	display: inline-block;
 	float: left;
+	word-wrap: break-word;
+	max-width: 410px;
 }
 
 .xtrace-tooltip .clear {
